Fix hover menu shifting down when chat input grows

--- a/css/main.css
+++ b/css/main.css
@@ -715,7 +715,7 @@ audio {
 .hover-menu {
     display: none;
     position: absolute;
-    bottom: 80%;
+    bottom: 100%;
     left: 0;
     box-shadow: 0 0 5px rgb(0 0 0 / 25%);
     z-index: 10000;
